--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 			font-size: 14px;
 			color:white;
 			text-decoration: none;
+			margin-bottom: 50px;
 		}
 		.content .info .boyaajobs ul li a:hover{
 			background-color: orange;
