--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		body{
 			font-size: 14px;
 			font-family: "Microsoft YaHei","SimSun";
+			height: 1220px;
 		}
 		.header{
 			height: 58px;
@@ -69,7 +70,6 @@
 		}
 		.content{
 			padding-top: 50px;
-			padding-bottom: 50px;
 		}
 		.content .product{
 			height: 229px;
